kubernetes/apps/media/tracearr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tracearr
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - tracearr.int.nerdbox.dev
        - tracearr.nerdbox.dev
      secretName: tracearr-tls
  rules:
    - host: tracearr.int.nerdbox.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tracearr
                port:
                  number: 3000
    - host: tracearr.nerdbox.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tracearr
                port:
                  number: 3000
